# dm-DS1

./: .gitignore  README.md
.github/workflows/: build.yml  dm-ds1.mk
ds1/: Cargo.toml
ds1/src/: clipper.rs  lib.rs  op_amp.rs  oversample.rs  params.rs  smooth_parameters.rs  tone.rs  transistor_booster.rs
ds1/src/clipper/: lookup_table.rs  oversample.rs
ds1/src/clipper/oversample/: coefficients.rs  fir_buffer.rs  simd_type.rs
ds1/src/oversample/: fir_filter.rs
ds1/src/shared/: lowpass_filter.rs
ds1/src/tone/: highpass_filter.rs  lowpass_filter.rs
ds1/src/transistor_booster/: bilinear_transform.rs  filter.rs
lv2/: Cargo.toml
lv2/dm-DS1.lv2/: dm-DS1_dsp.ttl  manifest.ttl
lv2/src/: lib.rs
nih-plug/src/: ds1_parameters.rs  editor.rs  lib.rs
nih-plug/src/editor/: ui_data.rs
profiling/: Cargo.toml
profiling/benches/: ds1_bench.rs
profiling/src/: main.rs
scripts/: build-lv2-for-mod-desktop-mac.sh  build-vst3-for-mac.sh
sketches/transfer-functions/: clipper.asc  op_amp.asc  op_amp.py  tone.asc  tone.py  transistor_booster.asc  transistor_booster.py
